...
          Row(
            crossAxisAlignment: CrossAxisAlignment.center,
            children: [
              FlagWidget(key: Key("flag_widget"), controller: _countryCode),
              Expanded(
                child: TextFormField(
                  key: Key("phone_input"),
                  onChanged: (phone) {
                    widget._phoneNumberController.text =
                        "${_countryCode.text}$phone";
                    _enteredPhone = phone;
                  },
                  keyboardType: TextInputType.phone,
...
