{
  "pleaseEnterYour": "Please enter your email and password",
  "email": "Email",
  "refererCode": "Referer Code (optional)",
  "newPassword": "New Password",
  "confirmPassword": "Confirm Password",
  "acceptTermsAndConditions": "Accept terms and conditions",
  "continue": "Continue",
  "createPassword": "Create Password",
  "enterYourOtp": "Enter your OTP",
  "activateAccount": "Activate Account",
  "weUnderstandYouForgotYourPassword": "We understand you forgot your password",
  "phoneNumber": "Phone Number",
  "forgetPassword": "Forget Password ?",
  "newToGafa": "New to Gafa?",
  "createAccount": "Create Account",
  "billRecharge": "Bill / Recharge",
  "airtimePurchase": "Airtime Purchase",
  "myBalance": "My Balance",
  "addMoney": "Add Money",
  "scanToPay": "Scan to Pay",
  "sendMoney": "Send Money",
  "requestMoney": "Request Money",
  "merchant": "Merchant",
  "currentPassword": "Current Password",
  "ok": "OK",
  "profile": "Profile",
  "edit": "Edit",
  "name": "Name",
  "fingerprint": "Fingerprint",
  "current Password": "Current Password",
  "walletWillUseFingerprint": "Wallet will use fingerprint saved on the device to log in",
  "completeTransactionWithFingerprint": "Complete transaction with fingerprint",
  "language": "Language",
  "loginSecurity": "Login & Security",
  "password": "Password",
  "notification": "Notification",
  "pushNotification": "Push Notification",
  "getPushNotificationForYourTransaction": "Get push notification for your transaction",
  "emailNotifications": "Email Notifications",
  "receiveEmailNotificationFormYourTransaction": "Receive email notification form your transaction",
  "logout": "Logout",
  "walletBalance": "Wallet Balance",
  "myQrCode": "My QrCode"
}